--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: msousa <mlrcbsousa@gmail.com>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/12 22:41:56 by msousa            #+#    #+#              #
-#    Updated: 2021/11/08 20:58:52 by msousa           ###   ########.fr        #
+#    Updated: 2021/11/18 14:09:00 by msousa           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,7 +30,7 @@ SRCS		= ft_atoi.c ft_isalpha.c ft_isprint.c ft_memchr.c ft_memmove.c \
 					ft_ullen.c ft_putnbr_base.c ft_putchar.c ft_putstr.c \
 					ft_ullen_base.c ft_ultoa_base.c ft_strnchr.c ft_printf_formatters.c \
 					ft_printf.c ft_strcmp.c ft_streq.c ft_pow.c ft_fabs.c ft_atof.c \
-					ft_isfloat.c
+					ft_isfloat.c ft_isnumber.c ft_putendl.c
 
 OBJS		= ${SRCS:.c=.o}
 
@@ -42,6 +42,9 @@ ${NAME}:	${OBJS}
 					${CC} ${CFLAGS} -c $< -o $@
 
 all:			${NAME}
+
+style:
+					-norminette $$( find . -type f \( -name "*.c" -or -name "*.h" \) )
 
 clean:
 					${RM} ${OBJS}
